--- a/style/style.css
+++ b/style/style.css
@@ -21,16 +21,10 @@
 }
 
 #container {
-	color: #fff;
-	text-shadow: 0 0 10px #00f3ff, 0 0 20px #00f3ff;
+	color: #2c3e50;
 	position: absolute;
 	left: 50%;
 	top: calc(50%);
-	background: rgba(0, 5, 20, 0.9);
-	padding: 20px;
-	border: 2px solid #00f3ff;
-	border-radius: 10px;
-	box-shadow: 0 0 20px rgba(0, 243, 255, 0.5);
 
 	text-align: center;
 	transform: translate(-50%, -50%);
@@ -164,9 +158,8 @@ button:focus {
 	font-size: 15px;
 	text-align: center;
 	display: none;
-	color: #ecf0f1;
-	background-color: #2c3e50;
-	border: 0px solid #2c3e50;
+	color: #2c3e50;
+	background-color: rgba(236, 240, 241, 1);
 }
 
 #colorBlindBtn {
@@ -314,8 +307,8 @@ button:focus {
 .centeredSubSubHeader {
 	font-size: 1.4rem;
 	text-align: center;
-	background: #ecf0f1;
-	color: #2c3e50;
+	color: #ff00ff;
+	text-shadow: 0 0 5px #ff00ff;
 }
 
 #buttonCont {
@@ -392,11 +385,9 @@ button:focus {
 }
 
 body {
-	color: #00f3ff;
+	color: #2c3e50;
 	font-family: 'Exo', 'Orbitron', sans-serif;
-	background-color: #050510;
-	text-shadow: 0 0 5px rgba(0, 243, 255, 0.7);
-
+	background-color: #ecf0f1;
 }
 
 #clickToExit {
@@ -410,7 +401,7 @@ body {
 	right: 0;
 	height: 100%;
 	width: 100%;
-	background-color: #050510;
+	background-color: #ecf0f1;
 
 	z-index: 0;
 }
